# TensorID

./: .gitignore  LICENSE.txt  README.md  demo_cp_coreid.py  demo_cp_satid.py  demo_sparse_coreid.py  demo_sparse_satid.py  pyproject.toml
data/: enron_compressed.npz  nell_compressed.npz
tensorID/coreid/: __init__.py  cpcid.py  spcid.py
tensorID/satid/: __init__.py  cpsid.py  spsid.py
tensorID/util/: KFJLT.py  __init__.py  count_sketch.py  hadamard.py  matrix.py  misc.py  sparse.py
